fix scrollbar display in IE

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1164,6 +1164,7 @@ nav.masthead {
             background-color: rgba(0,0,0,.35);
             transition: all .2s ease-in-out;
             cursor: intial;
+            -ms-overflow-style: -ms-autohiding-scrollbar;
             overflow-y: scroll;
             -webkit-overflow-scrolling: touch;
 
